refactor: note repository