@@ -4,37 +4,27 @@ import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.penguin.linknote.common.command.PageCommand;
 import com.penguin.linknote.common.dto.PageResponse;
-import com.penguin.linknote.common.service.PaginationService;
 import com.penguin.linknote.domain.note.NoteCommand;
+import com.penguin.linknote.domain.note.NoteCondition;
 import com.penguin.linknote.domain.note.NoteDTO;
-import com.penguin.linknote.domain.note.NoteFilter;
 import com.penguin.linknote.domain.note.exception.NoteNotFoundException;
 import com.penguin.linknote.domain.tag.TagDTO;
 import com.penguin.linknote.entity.Note;
 import com.penguin.linknote.entity.NoteTag;
 import com.penguin.linknote.entity.NoteTagId;
-import com.penguin.linknote.entity.QNote;
-import com.penguin.linknote.entity.QNoteTag;
-import com.penguin.linknote.entity.QTag;
 import com.penguin.linknote.entity.Tag;
 import com.penguin.linknote.repository.NoteRepository;
 import com.penguin.linknote.repository.NoteTagsRepository;
 import com.penguin.linknote.repository.TagRepository;
 import com.penguin.linknote.service.NoteService;
-import com.querydsl.core.BooleanBuilder;
-import com.querydsl.core.Tuple;
-import com.querydsl.jpa.impl.JPAQuery;
-import com.querydsl.jpa.impl.JPAQueryFactory;
 
-import jakarta.transaction.Transactional;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class NoteServiceImpl implements NoteService {
@@ -42,97 +32,54 @@ public class NoteServiceImpl implements NoteService {
     private final NoteRepository noteRepository;
     private final TagRepository tagRepository;
     private final NoteTagsRepository noteTagsRepository;
-    private final PaginationService paginationService;
-    private final JPAQueryFactory jpaQueryFactory;
 
     public NoteServiceImpl(
             NoteRepository noteRepository,
             TagRepository tagRepository,
-            NoteTagsRepository noteTagsRepository,
-            PaginationService paginationService,
-            JPAQueryFactory jpaQueryFactory) {
+            NoteTagsRepository noteTagsRepository) {
         this.noteRepository = noteRepository;
         this.tagRepository = tagRepository;
         this.noteTagsRepository = noteTagsRepository;
-        this.paginationService = paginationService;
-        this.jpaQueryFactory = jpaQueryFactory;
     }
 
     @Override
-    public PageResponse<NoteDTO> indexNotes(NoteFilter filter, PageCommand pageCommand) {
-        QNote qNote = QNote.note;
-        QTag qTag = QTag.tag;
-        QNoteTag qNoteTag = QNoteTag.noteTag;
+    public PageResponse<NoteDTO> indexNotes(NoteCondition condition, PageCommand pageCommand) {
+        int page = pageCommand == null || pageCommand.getPage() == null ? 1 : pageCommand.getPage();
+        int limit = pageCommand == null || pageCommand.getPageSize() == null ? 0 : pageCommand.getPageSize();
 
-        JPAQuery<Note> query = jpaQueryFactory.selectDistinct(qNote).from(qNote);
-        BooleanBuilder builder = new BooleanBuilder();
-        builder.and(qNote.notebookId.eq(filter.getNotebookId()));
+        PageResponse<Note> notePage = noteRepository.paginate(page, limit, condition);
 
-        if (filter.getTitle() != null && !filter.getTitle().isEmpty())
-            builder.and(qNote.title.startsWith(filter.getTitle()));
-        if (filter.getStar() != null) builder.and(QNote.note.star.eq(filter.getStar()));
+        PageResponse<NoteDTO> response = new PageResponse<>();
+        response.setCount(notePage.getCount());
+        response.setCurrentPage(notePage.getCurrentPage());
+        response.setPageSize(notePage.getPageSize());
+        response.setTotalPage(notePage.getTotalPage());
+        List<NoteDTO> noteDTOs = notePage.getItems().stream().map(NoteDTO::fromEntity).toList();
+        response.setItems(noteDTOs);
 
-        if (filter.getTagIdList() != null && !filter.getTagIdList().isEmpty()) {
-            query.join(qNoteTag).on(qNoteTag.note.id.eq(qNote.id))
-                    .where(builder.and(qNoteTag.tag.id.in(filter.getTagIdList())));
-        } else {
-            query.where(builder);
+        if (noteDTOs.isEmpty()) {
+            return response;
         }
 
-        // 1. 取得 note
-        // 2. 解析出 noteIds
-        // 3. JOIN note_tags，取得 Map<noteId, List<Tag>>
-        // 4. stream set note's tags.
-
-        PageResponse<NoteDTO> notes = paginationService.applyPagination(query, pageCommand, NoteDTO::fromEntity);
-
-        if (notes.getItems().isEmpty()) return notes;
-
-        // Get note ids.
-        UUID[] noteIds = notes.getItems().stream().map(NoteDTO::getId).toArray(UUID[]::new);
-
-        // Get note tags and groupBy noteId.
-        List<Tuple> results = jpaQueryFactory
-                .select(qNote.id, qTag)
-                .from(qNoteTag)
-                .join(qNote).on(qNoteTag.note.id.eq(qNote.id))
-                .join(qTag).on(qNoteTag.tag.id.eq(qTag.id))
-                .where(qNoteTag.note.id.in(noteIds))
-                .orderBy(qNote.title.asc())
-                .fetch();
-
-        Map<UUID, List<TagDTO>> noteTags = results.stream()
-                .collect(Collectors.groupingBy(
-                        tuple -> tuple.get(qNote.id),
-                        Collectors.mapping(
-                                tuple -> TagDTO.fromEntity(Objects.requireNonNull(tuple.get(qTag))),
-                                Collectors.toList()
-                        )
-                ));
-
-        notes.getItems().forEach(note -> {
-            note.setTags(noteTags.getOrDefault(note.getId(), Collections.emptyList()));
+        List<UUID> noteIds = noteDTOs.stream().map(NoteDTO::getId).toList();
+        Map<UUID, List<Tag>> noteTags = noteTagsRepository.findTagsByNoteIds(noteIds);
+        noteDTOs.forEach(note -> {
+            List<TagDTO> tags = noteTags.getOrDefault(note.getId(), Collections.emptyList())
+                    .stream()
+                    .map(TagDTO::fromEntity)
+                    .toList();
+            note.setTags(tags);
         });
 
-        return notes;
+        return response;
     }
 
     @Override
     public NoteDTO get(UUID noteId) {
-        Note note = noteRepository.findById(noteId).orElseThrow(() -> new NoteNotFoundException("Note note found."));
+        Note note = noteRepository.get(noteId)
+                .orElseThrow(() -> new NoteNotFoundException("Note note found."));
 
-        QNote qNote = QNote.note;
-        QTag qTag = QTag.tag;
-        QNoteTag qNoteTag = QNoteTag.noteTag;
-
-        List<TagDTO> tags = jpaQueryFactory
-                .select(qTag)
-                .from(qNoteTag)
-                .join(qNote).on(qNoteTag.note.id.eq(qNote.id))
-                .join(qTag).on(qNoteTag.tag.id.eq(qTag.id))
-                .where(qNoteTag.note.id.eq(noteId))
-                .orderBy(qTag.title.asc())
-                .fetch()
+        List<TagDTO> tags = noteTagsRepository.findTagsByNoteId(noteId)
                 .stream()
                 .map(TagDTO::fromEntity)
                 .toList();
@@ -154,12 +101,13 @@ public class NoteServiceImpl implements NoteService {
         note.setStar(false);
         note.setCreatedAt(Instant.now());
         note.setUpdatedAt(Instant.now());
-        return NoteDTO.fromEntity(noteRepository.save(note));
+        return NoteDTO.fromEntity(noteRepository.create(note));
     }
 
     @Override
     public NoteDTO update(UUID noteId, NoteCommand noteCommand) {
-        Note exsitNote = noteRepository.findById(noteId).orElseThrow(() -> new NoteNotFoundException("Note note found."));
+        Note exsitNote = noteRepository.get(noteId)
+                .orElseThrow(() -> new NoteNotFoundException("Note note found."));
 
         exsitNote.setId(noteId);
         exsitNote.setTitle(noteCommand.getTitle() == null ? exsitNote.getTitle() : noteCommand.getTitle());
@@ -168,12 +116,12 @@ public class NoteServiceImpl implements NoteService {
         exsitNote.setQuestion(noteCommand.getQuestion() == null ? exsitNote.getQuestion() : noteCommand.getQuestion());
         exsitNote.setStar(noteCommand.getStar() == null ? exsitNote.getStar() : noteCommand.getStar());
         exsitNote.setUpdatedAt(Instant.now());
-        return NoteDTO.fromEntity(noteRepository.save(exsitNote));
+        return NoteDTO.fromEntity(noteRepository.update(exsitNote));
     }
 
     @Override
     public void delete(UUID noteId) {
-        noteRepository.deleteById(noteId);
+        noteRepository.delete(noteId);
     }
 
     /**
@@ -183,7 +131,7 @@ public class NoteServiceImpl implements NoteService {
     @Transactional
     public void addTagToNote(UUID noteId, List<UUID> tagIdList) {
         // 1. 查詢 Note（如果不存在會拋出異常）
-        Note note = noteRepository.findById(noteId)
+        Note note = noteRepository.get(noteId)
                 .orElseThrow(() -> new NoteNotFoundException("Note not found."));
         
         // 2. 刪除現有的所有 tags（批次刪除）
@@ -210,7 +158,7 @@ public class NoteServiceImpl implements NoteService {
                     noteTag.setNote(note);
                     noteTag.setTag(tag);
                     
-                    // 時間戳會由 @PrePersist 自動設定，但也可以手動設定
+                    // 時間戳需手動設定
                     noteTag.setCreatedAt(Instant.now());
                     noteTag.setUpdatedAt(Instant.now());
                     
@@ -223,7 +171,7 @@ public class NoteServiceImpl implements NoteService {
         
         // 6. 更新 Note 的時間戳
         note.setUpdatedAt(Instant.now());
-        noteRepository.save(note);
+        noteRepository.update(note);
     }
 
 }
